Fix title align

--- a/assets/css/varnalab.css
+++ b/assets/css/varnalab.css
@@ -66,6 +66,7 @@ h1 {
 .v-toolbar .mdc-toolbar__title {
   opacity: 0;
   transition: all .1s;
+  align-self: unset;
 }
 .v-toolbar .mdc-toolbar__section {
   z-index: 2;
